--- a/index.html
+++ b/index.html
@@ -220,10 +220,6 @@
         </div>
 
         <div class="p-6 border-t bg-gray-50 flex flex-col gap-3">
-            <button type="button" onclick="exportData()" class="w-full bg-black text-white font-bold py-3 rounded-lg hover:bg-gray-800 transition shadow-lg flex items-center justify-center gap-2">
-                <i class="fa-solid fa-download"></i> Download Report
-            </button>
-            
             <button type="button" onclick="printWithCustomName()" class="w-full bg-gray-200 text-black font-bold py-3 rounded-lg hover:bg-gray-300 transition flex items-center justify-center gap-2">
                 <i class="fa-solid fa-file-pdf"></i> Save as PDF
             </button>
@@ -416,48 +412,6 @@
             window.print();
             setTimeout(() => document.title = oldTitle, 1000);
         }
-
-        function exportData() {
-            const goal = document.getElementById('synth-goal').value;
-            const prev = document.getElementById('synth-prev').value;
-            const method = document.getElementById('synth-method').value;
-            const impact = document.getElementById('synth-impact').value;
-            const limit = document.getElementById('synth-limit').value;
-            let md = `# ${currentTitle}\n\n`;
-            md += `**ArXiv ID:** ${currentId}\n`;
-            md += `**Date:** ${new Date().toLocaleDateString()}\n\n`;
-            md += `## Synthesis\n`;
-            md += `* **Goal:** ${goal || "N/A"}\n`;
-            md += `* **Context:** ${prev || "N/A"}\n`;
-            md += `* **Method:** ${method || "N/A"}\n`;
-            md += `* **Impact:** ${impact || "N/A"}\n`;
-            md += `* **Limitations:** ${limit || "N/A"}\n\n`;
-            md += `---\n\n`;
-            const root = document.getElementById('paper-content');
-            const blocks = root.querySelectorAll('.ltx_section, .ltx_subsection, .ltx_p, .ltx_paragraph, .ltx_title_section, .ltx_title_subsection, figure');
-            blocks.forEach(el => {
-                if (el.classList.contains('ltx_title_section')) {
-                    md += `\n## ${el.innerText}\n\n`;
-                } 
-                else if (el.classList.contains('ltx_title_subsection')) {
-                    md += `\n### ${el.innerText}\n\n`;
-                }
-                else if (el.classList.contains('ltx_p') || el.classList.contains('ltx_paragraph')) {
-                    if (refactorMap[el.id]) {
-                        md += `> **[REFACTORED]** ${refactorMap[el.id]}\n\n`;
-                    } else {
-                        const cleanText = el.innerText.replace(/\s+/g, ' ').trim();
-                        if(cleanText.length > 0) md += `${cleanText}\n\n`;
-                    }
-                }
-            });
-            const blob = new Blob([md], { type: 'text/markdown' });
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = getExportFilename('md'); // Uses the standardized name
-            a.click();
-        }
         document.getElementById('url-input').addEventListener('keypress', (e) => {
             if(e.key === 'Enter') loadPaper();
         });
@@ -478,11 +432,11 @@
             });
             let md = `# ${currentTitle}\n\n`;
             md += `**Date:** ${new Date().toLocaleDateString()}\n\n`;
-            if (goal) md += `## 🎯 Goal\n${goal}\n\n`;
-            if (prev) md += `## 🔍 Context\n${prev}\n\n`;
-            if (method) md += `## ⚙️ Methodology\n${method}\n\n`;
-            if (impact) md += `## 💥 Impact\n${impact}\n\n`;
-            if (limit) md += `## ⚠️ Limitations\n${limit}\n\n`;
+            if (goal) md += `## Goal\n${goal}\n\n`;
+            if (prev) md += `## Context\n${prev}\n\n`;
+            if (method) md += `## Methodology\n${method}\n\n`;
+            if (impact) md += `## Impact\n${impact}\n\n`;
+            if (limit) md += `## Limitations\n${limit}\n\n`;
             if (notes.length > 0) {
                 md += `## 📝 Refactored Notes\n${notes.join('\n\n')}`;
             }
